# rust_continuous_project

./: Cargo.toml  README.md
rust-cli-file-uploader/: .env  Cargo.toml
rust-cli-file-uploader/files/: back_up.sh  network.sh
rust-cli-file-uploader/src/: compress.rs  database.rs  loadfile.rs  main.rs
rust-hello-server/: Cargo.toml  Dockerfile
rust-hello-server/files/: g.sh
rust-hello-server/public/: index.html
rust-hello-server/src/: compress.rs  loadfile.rs  main.rs
standalone-file-compression-function/: Cargo.toml  g.sh
standalone-file-compression-function/src/: main.rs
