[package]
name = "rust-cli-file-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
flate2 = "1.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
anyhow = "1.0.97"
tracing = "0.1.41"
